--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body{
     height: 100vh;
@@ -24,13 +24,14 @@ body{
 }
 .container .header h1{
     font-size:21px;
-    font-weight: 800;
+    font-weight: 600;
     text-align: center;
 }
 .header p{
     color:#474747;
     font-size: 16px;
     margin-top: 5px;
+    text-align: center;
 }
 .container .form{
     margin: 20px 0 30px;
@@ -48,12 +49,16 @@ body{
     padding:0 17px;
     font-size:18px ;
 }
-.form button{
+.form .btn{
     background: #2498DB;
     color:#fff;
     margin-top: 20px;
     cursor: pointer;
     font-size: 18px;
+}
+.form .btn.active{
+    background: #6BCB77;
+    cursor: disabled;
 }
 .container .qr-code{
     border: 1px solid #ccc;
